src/tests/integration/snapshots/mosaic__tests__integration__compatibility__neovim_insert_mode-2.snap
---
source: src/tests/integration/compatibility.rs
expression: snapshot
---
line 2                                                                                                              
line 3                                                                                                              
line 4                                                                                                              
line 5                                                                                                              
line 6                                                                                                              
line 7                                                                                                              
line 8                                                                                                              
line 9                                                                                                              
line 10                                                                                                             
line 11                                                                                                             
line 12                                                                                                             
line 13                                                                                                             
line 14                                                                                                             
line 15                                                                                                             
line 16                                                                                                             
line 17                                                                                                             
line 18                                                                                                             
line 19                                                                                                             
line 20                                                                                                             
line 21                                                                                                             
line 22                                                                                                             
line 23                                                                                                             
line 24                                                                                                             
line 25                                                                                                             
line 26                                                                                                             
some-file                                                                                         10,1           Top
-- INSERT --                                                                                                        
Bye from Mosaic!█                                                                                                   
