src/tests/integration/snapshots/mosaic__tests__integration__compatibility__run_bandwhich_from_fish_shell.snap
---
source: src/tests/integration/compatibility.rs
expression: snapshot
---
 Total Up / Down: 46Bps / 57Bps                                                                                     
┌Utilization by process name───────────────────────────────────────────────────────────────────────────────────────┐
│Process                                              Connections              Up / Down                           │
│                                                                                                                  │
│firefox                                              3                        46Bps / 5█Bps                       │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
│                                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Press <SPACE> to pause. Use <TAB> to rearrange tables. (DNS queries hidden).                                       
