src/tests/integration/snapshots/mosaic__tests__integration__compatibility__vim_ctrl_d-2.snap
---
source: src/tests/integration/compatibility.rs
expression: snapshot
---
  2 line15                                                                                                          
  1 line16                                                                                                          
17  line17                                                                                                          
  1 line18                                                                                                          
  2 line19                                                                                                          
  3 line20                                                                                                          
  4 line21                                                                                                          
  5 line22                                                                                                          
  6 line23                                                                                                          
  7 line24                                                                                                          
  8 line25                                                                                                          
  9 line26                                                                                                          
 10 line27                                                                                                          
 11 line28                                                                                                          
 12 line29                                                                                                          
 13 line30                                                                                                          
 14 line31                                                                                                          
 15 line32                                                                                                          
 16 line33                                                                                                          
 17 line34                                                                                                          
 18 line35                                                                                                          
 19 line36                                                                                                          
 20 line37                                                                                                          
 21 line38                                                                                                          
 22 line39                                                                                                          
 NORMAL  testfile.rs                                                              unix | utf-8 | rust   40%   17:1  
"/tmp/testfile.rs" 42L, 285C                                                                                        
Bye from Mosaic!█                                                                                                   
